<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@android:color/white">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <!--Circle Image view library used-->
                        <android.support.constraint.ConstraintLayout
                            android:layout_width="100dp"
                            android:layout_height="100dp">


                            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                                android:id="@+id/post_profile_image"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_gravity="start"
                                android:layout_marginEnd="7dp"
                                android:elevation="4dp"

                                android:src="@drawable/profile"
                                />

                            <ImageButton
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:background="@drawable/share8"
                                android:scaleType="center"
                                tools:ignore="MissingConstraints"
                                tools:layout_editor_absoluteX="73dp"
                                tools:layout_editor_absoluteY="80dp"
                                android:id="@+id/user_profile_image_button"
                                />

                        </android.support.constraint.ConstraintLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="horizontal">

                                <android.support.constraint.ConstraintLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content">

                                    <TextView
                                        android:id="@+id/profile_username"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:text="@string/alise"
                                        android:textColor="@android:color/black"
                                        android:textSize="25sp"
                                        android:textStyle="italic" />

                                    <EditText
                                        android:id="@+id/profile_username_edit"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"

                                        android:textColor="@android:color/black"
                                        android:textSize="17sp"
                                        android:textStyle="italic" />
                                </android.support.constraint.ConstraintLayout>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:orientation="horizontal">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical">

                                    <TextView
                                        android:id="@+id/user_posts"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/postno"
                                        android:textColor="@android:color/black"
                                        android:textSize="20sp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/posts"
                                        android:textColor="@android:color/darker_gray" />

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_marginStart="40dp"
                                    android:gravity="center"
                                    android:orientation="vertical">

                                    <TextView
                                        android:id="@+id/user_followers"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/followersno"
                                        android:textColor="@android:color/black"
                                        android:textSize="20sp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/followers"
                                        android:textColor="@android:color/darker_gray" />

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_marginStart="40dp"
                                    android:gravity="center"
                                    android:orientation="vertical">

                                    <TextView
                                        android:id="@+id/user_following"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/followingno"
                                        android:textColor="@android:color/black"
                                        android:textSize="20sp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/following"
                                        android:textColor="@android:color/darker_gray" />

                                </LinearLayout>
                            </LinearLayout>
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/follow_users"
                            android:layout_width="180dp"
                            android:layout_height="30dp"
                            android:background="@drawable/round"
                            android:elevation="4dp"
                            android:padding="6dp"
                            android:paddingEnd="60dp"
                            android:paddingStart="60dp"
                            android:shadowColor="@android:color/black"
                            android:text="@string/follow"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="11sp" />


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="20dp"
                            android:background="@drawable/input"
                            android:elevation="4dp"
                            android:orientation="horizontal"
                            android:padding="8dp"
                            android:paddingEnd="25dp"
                            android:paddingStart="25dp">

                            <ImageView
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_profile_black" />

                            <ImageView
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                android:layout_marginStart="5dp"
                                android:src="@drawable/ic_check" />

                        </LinearLayout>


                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginStart="20dp"
                            android:background="@drawable/ic_arrow_drop_down"
                            android:elevation="4dp"
                            android:padding="6dp"
                            android:paddingEnd="10dp"
                            android:paddingStart="10dp"
                            android:scaleType="fitCenter"
                            android:textAlignment="center" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="13dp"
                        android:orientation="horizontal">

                        <android.support.constraint.ConstraintLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/profile_fullname"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/smith"
                                android:textColor="@android:color/black"
                                android:textSize="15sp" />

                            <EditText
                                android:id="@+id/profile_fullname_edit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"

                                android:textColor="@android:color/black"
                                android:textSize="12sp" />
                        </android.support.constraint.ConstraintLayout>

                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:src="@drawable/ic_icons8_verified_account_filled_100" />

                    </LinearLayout>

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/profile_bio"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/fashion"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/profile_bio_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:textSize="13sp" />
                    </android.support.constraint.ConstraintLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="13dp"
                    android:background="@color/apptool"
                    android:orientation="vertical">

                    <include layout="@layout/middle_bar" />

                    <!--Recycler can be used-->

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/profile_posts_recyclerview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentStart="true"
                        android:clipToPadding="false"
                        android:nestedScrollingEnabled="false"
                        android:paddingTop="2dp" />

                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>
